hacky fix for nav collapse button.  Needs a rework!

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -33,6 +33,7 @@ header {
 
 nav {
   grid-column: 2;
+  position: relative;
 }
 
 .navtoggle {
@@ -40,11 +41,12 @@ nav {
 }
 
 .navtogglelabel {
-  font-size: 1.9rem;
+  font-size: 1.5rem;
   text-align: center;
   padding-bottom: 0.1rem;
   border: 2px dashed lightblue;
   border-radius: 5px;
+  margin: 1px;
   @media only screen and (min-width: 700px) {
     display: none;
   }
@@ -60,7 +62,7 @@ nav ul {
   list-style: none;
   margin: 0rem;
   margin-right: 0.625rem;
-  padding: 0.5rem;
+  padding: 0.1rem;
   border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
